--- a/index.html
+++ b/index.html
@@ -359,6 +359,78 @@
           </div>
         </div>
 
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/gEU2QniE6E77NI6lCU6MxlNBvIx.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Interstellar</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
+              </div>
+              <span class="movie-year-text">2014</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/oYuLEt3zVCKq57qu2F8dT7NIa6f.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Inception</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
+              </div>
+              <span class="movie-year-text">2010</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
         <div class="movie-item" data-movie-id="2">
           <div class="movie-content">
             <img
@@ -1049,42 +1121,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://www.themoviedb.org/t/p/original/gEU2QniE6E77NI6lCU6MxlNBvIx.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Interstellar</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 10.0</span
-                >
-              </div>
-              <span class="movie-year-text">2014</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://www.themoviedb.org/t/p/original/5BHuvQ6p9kfc091Z8RiFNhCwL4b.jpg"
               alt="Movie 2 Poster"
               class="movie-poster"
@@ -1206,6 +1242,42 @@
                 >
               </div>
               <span class="movie-year-text">1993</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/7oWY8VDWW7thTzWh3OKYRkWUlD5.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Django Unchained</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
+              </div>
+              <span class="movie-year-text">2012</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -4476,7 +4548,7 @@
           </div>
         </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://www.themoviedb.org/t/p/original/nT97ifVT2J1yMQmeq20Qblg61T.jpg"
@@ -4490,6 +4562,78 @@
                 >
               </div>
               <span class="movie-year-text">2006</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/lx4kWcZc3o9PaNxlQpEJZM17XUI.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Aviator</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span
+                >
+              </div>
+              <span class="movie-year-text">2004</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/4GDy0PHYX3VRXUtwK5ysFbg3kEx.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Shutter Island</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.8</span
+                >
+              </div>
+              <span class="movie-year-text">2010</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -6019,6 +6163,42 @@
                 >
               </div>
               <span class="movie-year-text">2009</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/uK46P78BvWGDW4dbq9C13LAwpmw.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Psycho</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 5.0</span
+                >
+              </div>
+              <span class="movie-year-text">1960</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
