--- a/index.html
+++ b/index.html
@@ -1408,6 +1408,42 @@
           </div>
         </div>
 
+         <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/xXxuJPNUDZ0vjsAXca0O5p3leVB.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">As Good as It Gets</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.9</span
+                >
+              </div>
+              <span class="movie-year-text">1997</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
         <div class="movie-item">
           <div class="movie-content">
             <img
@@ -1896,6 +1932,42 @@
                 >
               </div>
               <span class="movie-year-text">2003</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+          <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/o2s9ow0uRRm1BcF3teznk5twd90.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Malcolm X</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.7</span
+                >
+              </div>
+              <span class="movie-year-text">1992</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -3391,6 +3463,42 @@
                 >
               </div>
               <span class="movie-year-text">1990</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+          <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/vgpXmVaVyUL7GGiDeiK1mKEKzcX.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Jumanji</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.1</span
+                >
+              </div>
+              <span class="movie-year-text">1995</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
